--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,16 @@
   <title>uDrive</title>
   <base href="/">
   <meta content="width=device-width, initial-scale=1" name="viewport">
+  <link href="styles.scss" rel="stylesheet">
   <link href="favicon.ico" rel="icon" type="image/x-icon">
   <link href="https://fonts.gstatic.com" rel="preconnect">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body class="mat-typography">
 <app-root></app-root>
+<script type="text/javascript" src="js/materialize.min.js"></script>
 </body>
 </html>
